<resources>
    <string name="app_name">LeilaoAutoPecasTech</string>
    <string name="title_activity_meus_anuncios">MeusAnuncios</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_MeusAnuncios">MeusAnuncios</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sair">sair</string>
    <string name="Marca">Marca</string>
    <string name="Categoria">CATEGORIA</string>
    <string name="Modelo">Modelo</string>


    <string-array name="marca">
        <item>Volkswagen</item>
        <item>Chevrolet</item>
    </string-array>


    <string-array name="Chevrolet">
    <item>Corsa - Chevrolet </item>
    <item>Celta - Chevrolet</item>
    <item>Astra Sedan - Chevrolet</item>
    <item>Agile - Chevrolet</item>
    </string-array>

    <string-array name="Volkswagen">
    <item>CrossFox </item>
    <item>Golf</item>
    <item>Up!</item>
    <item>Gol - Volkswagen</item>

    </string-array>
    <string-array name="modelo">
        <item>Corsa - Chevrolet </item>
        <item>Celta - Chevrolet</item>
        <item>Astra Sedan - Chevrolet</item>
        <item>Agile - Chevrolet</item>

        <item>CrossFox - Volkswagen </item>
        <item>Golf - Volkswagen</item>
        <item>Up! - Volkswagen</item>
        <item>Gol - Volkswagen</item>

    </string-array>

    <string-array name="categoria">
        <item>Acabamentos Internos</item>
        <item>Parachoques e Paralamas</item>
        <item>Pedais e Acionamentos</item>
        <item>Portas e Capôs</item>
    </string-array>


    <string-array name="pecas">
        <item>Para-Choque Dianteiro - Parachoques e Paralamas</item>
        <item>Para-Barro do Para-Lama Dianteiro - Parachoques e Paralamas</item>
        <item>Para-Lama Traseiro - Parachoques e Paralamas</item>
    </string-array>


</resources>
