<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_meusanuncios"
            android:icon="@drawable/store"
            android:title="@string/menu_MeusAnuncios" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Conta">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/conta"
                android:title="@string/menu_perfil" />
            <item
                android:id="@+id/sair"
                android:onClick="sair"
                android:icon="@drawable/close_box_outline"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
