<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.leilaoautopecastech.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_meusanuncios"
        android:name="com.example.leilaoautopecastech.activity.ui.meus_anuncios.meus_anunciosFragment"
        android:label="@string/menu_MeusAnuncios"
        tools:layout="@layout/fragment_meus_anuncios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.leilaoautopecastech.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.leilaoautopecastech.activity.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.leilaoautopecastech.activity.ui.perfil.ShareFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_sair"
        android:name="com.example.leilaoautopecastech.activity.ui.sair.SendFragment"
        android:label="@string/menu_sair" />
</navigation>